HW06 without Optional

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,6 +10,21 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 
-meal.title=Meals
+meal.title=title
+meal.DateTime=Date Time
+meal.Description=Description
+meal.Calories=Calories
+meal.Save=Save
+meal.Cancel=Cancel
+
+meals.Meals=Meals
+meals.FromDate=FromDate
+meals.ToDate=ToDate
+meals.FromTime=FromTime
+meals.ToTime=ToTime
+meals.Filter=Filter
+meals.AddMeal=AddMeal
+meals.Update=Update
+meals.Delete=Delete
 
 common.select=Select
